--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
    "source": [
     "#234567890#234567890#234567890#234567890#234567890#234567890#234567890#234567890\n",
     "from datasets import load_dataset\n",
-    "from transformers import pipeline"
+    "import numpy as np\n",
+    "from sklearn.metrics import classification_report\n",
+    "from tqdm import tqdm\n",
+    "from transformers import pipeline\n",
+    "from transformers.pipelines.pt_utils import KeyDataset"
    ]
   },
   {
@@ -77,91 +81,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65b433d3b3a14234bb31e0767d1f9a95",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/501M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Some weights of the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment-latest were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35b71e2fbe244bdda062b377ff998ddc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/501M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "339ef4214b22444392592377644e4155",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d087f135ef7840d8b247808569c19848",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "418016083609484cb84e30cce0ed8ab0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use mps:0\n",
-      "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/transformers/pipelines/text_classification.py:111: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
-      "  warnings.warn(\n"
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Device set to use mps:0\n"
      ]
     }
    ],
@@ -172,8 +98,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6be705dd-fc9a-4b81-bd58-743f2b592d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1066/1066 [00:27<00:00, 38.59it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = []\n",
+    "for output in tqdm(\n",
+    "        pipe(KeyDataset(data['test'], 'text')), \n",
+    "        total=len(data['test'])):\n",
+    "    neg_score = output[0]['score']\n",
+    "    pos_score = output[2]['score']\n",
+    "    assignment = np.argmax([neg_score, pos_score])\n",
+    "    y_pred.append(assignment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "378d1826-d327-4b53-a72f-73f417380c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_performance(y_true, y_pred):\n",
+    "    perf = classification_report(\n",
+    "        y_true, y_pred, target_names=['Negative Review', 'Positive Review'])\n",
+    "    print(perf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e3317727-fd74-4430-9806-1f7835cd5d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "Negative Review       0.50      1.00      0.67       533\n",
+      "Positive Review       0.00      0.00      0.00       533\n",
+      "\n",
+      "       accuracy                           0.50      1066\n",
+      "      macro avg       0.25      0.50      0.33      1066\n",
+      "   weighted avg       0.25      0.50      0.33      1066\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1833: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1833: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/sklearn/metrics/_classification.py:1833: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_performance(data['test']['label'], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82fae9b1-6809-44d0-a0e4-2544a6b377d3",
    "metadata": {},
    "outputs": [],
    "source": []
