--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
@@ -24,14 +24,6 @@
    "id": "ed2dbd98-12ea-445b-b8d2-23969723d569",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since rotten_tomatoes couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /Users/damiansp/.cache/huggingface/datasets/rotten_tomatoes/default/0.0.0/aa13bc287fa6fcab6daf52f0dfb9994269ffea28 (last modified on Fri Jan  9 09:17:22 2026).\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -116,7 +108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [00:27<00:00, 38.95it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 52.02it/s]\n"
      ]
     }
    ],
@@ -184,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "82fae9b1-6809-44d0-a0e4-2544a6b377d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0557fca9122946cf879e543c6eb5bf4b",
+       "model_id": "9dadc6763745440eac94adacd8ef3810",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaf1e1934247485380cc00fdbb414cdb",
+       "model_id": "bd69d69dea6542c799587a40360ca78b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +214,7 @@
        "(8530, 768)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "6658860a-1733-40c8-bc38-67b62a03b9f1",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1140,7 @@
        "LogisticRegression(random_state=1103)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "8f4d9838-78a7-4144-bb6e-c033dae6e7ab",
    "metadata": {},
    "outputs": [
@@ -1187,8 +1179,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3c0316c1-9419-405c-ae30-ff259c772d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.04459881, -0.03335252,  0.02032451, ...,  0.00385528,\n",
+       "         0.04054591, -0.01143499],\n",
+       "       [ 0.04103612, -0.02912744, -0.00471622, ...,  0.02639273,\n",
+       "         0.03357305, -0.04018767]], shape=(2, 768), dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_embeddings = mod.encode(['A negative review', 'A positive review'])\n",
+    "label_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec38da69-c280-408c-9a82-e99d16c2329e",
    "metadata": {},
    "outputs": [],
    "source": []
