--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from tqdm import tqdm\n",
     "from transformers import pipeline\n",
     "from transformers.pipelines.pt_utils import KeyDataset"
@@ -108,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 52.02it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 52.30it/s]\n"
      ]
     }
    ],
@@ -183,7 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dadc6763745440eac94adacd8ef3810",
+       "model_id": "906c4260225e4a348f9b04008983d964",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd69d69dea6542c799587a40360ca78b",
+       "model_id": "ab346ef2d51a4938abc5072f14863ec2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1179,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3c0316c1-9419-405c-ae30-ff259c772d9e",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1193,7 @@
        "         0.03357305, -0.04018767]], shape=(2, 768), dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,8 +1205,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ec38da69-c280-408c-9a82-e99d16c2329e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "Negative Review       0.78      0.77      0.78       533\n",
+      "Positive Review       0.77      0.79      0.78       533\n",
+      "\n",
+      "       accuracy                           0.78      1066\n",
+      "      macro avg       0.78      0.78      0.78      1066\n",
+      "   weighted avg       0.78      0.78      0.78      1066\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim_matrix = cosine_similarity(test_embeddings, label_embeddings)\n",
+    "y_pred = np.argmax(sim_matrix, axis=1)\n",
+    "evaluate_performance(data['test']['label'], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8805e857-fd9d-4dc2-9972-db68bcfc5dc4",
    "metadata": {},
    "outputs": [],
    "source": []
