--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 52.30it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 51.04it/s]\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "906c4260225e4a348f9b04008983d964",
+       "model_id": "0e16b1fa99bb4b9ea801eba4887cffd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab346ef2d51a4938abc5072f14863ec2",
+       "model_id": "faa7f805ad9a4473a4ad511b8fd00154",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ec38da69-c280-408c-9a82-e99d16c2329e",
    "metadata": {},
    "outputs": [
@@ -1233,8 +1233,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8805e857-fd9d-4dc2-9972-db68bcfc5dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62e9abd3f0354f3aa42bc12f9e40651a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e87aa562e3304b609ca061020b5ab2fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/308M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d7fa0b72f4741ef93ec9c7453911ce2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/147 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a3f2f13b4c1479bba73d2cc76d41339",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b483da96fd74207bb850ef87e8cb52c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46cfad8d4d0143e5a0f4e9ff8d3b0112",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ff75c9dd4b14ddc9f1844fb9960fc32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe = pipeline('text2text-generation', model='google/flan-t5-small')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4817cbfc-722b-4242-943a-45665b970419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = 'Is the following text positive or negative?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92758d71-67ec-420f-aa0f-053fa6782380",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "843965e840534d66b97e7d7450a639ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/8530 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "528793066d76407e9728e9f12d411f2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1066 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71f7264b7d974061a9365dfba9e87994",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1066 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['text', 'label', 't5'],\n",
+       "        num_rows: 8530\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['text', 'label', 't5'],\n",
+       "        num_rows: 1066\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['text', 'label', 't5'],\n",
+       "        num_rows: 1066\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.map(lambda ex: {'t5': f'{prompt} -- {ex[\"text\"]}'})\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "99169758-0f22-4e00-a962-ba1c20746d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1066/1066 [01:34<00:00, 11.26it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = []\n",
+    "for output in tqdm(\n",
+    "        pipe(KeyDataset(data['test'], 't5')), total=len(data['test'])):\n",
+    "    text = output[0]['generated_text']\n",
+    "    y_pred.append(0 if text == 'negative' else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b6b2bf4d-3a6d-4c33-ac6a-e9e4416f4539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "Negative Review       0.82      0.88      0.84       533\n",
+      "Positive Review       0.87      0.80      0.83       533\n",
+      "\n",
+      "       accuracy                           0.84      1066\n",
+      "      macro avg       0.84      0.84      0.84      1066\n",
+      "   weighted avg       0.84      0.84      0.84      1066\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_performance(data['test']['label'], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "769f8640-cc56-4b63-acaf-8152dc39d71a",
    "metadata": {},
    "outputs": [],
    "source": []
