--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
    "source": [
     "#234567890#234567890#234567890#234567890#234567890#234567890#234567890#234567890\n",
+    "import json\n",
+    "\n",
     "from datasets import load_dataset\n",
     "import numpy as np\n",
+    "import openai\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
@@ -21,10 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ed2dbd98-12ea-445b-b8d2-23969723d569",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using the latest cached version of the dataset since rotten_tomatoes couldn't be found on the Hugging Face Hub\n",
+      "Found the latest cached dataset configuration 'default' at /Users/damiansp/.cache/huggingface/datasets/rotten_tomatoes/default/0.0.0/aa13bc287fa6fcab6daf52f0dfb9994269ffea28 (last modified on Tue Feb 17 08:53:10 2026).\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -44,7 +55,7 @@
        "})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3f0985f1-5a40-4fd5-bfc2-b772e6aa2b49",
    "metadata": {},
    "outputs": [
@@ -68,7 +79,7 @@
        " 'label': [1, 0]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c642c33b-9665-4463-b29b-369c93b3b4e2",
    "metadata": {},
    "outputs": [
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6be705dd-fc9a-4b81-bd58-743f2b592d1f",
    "metadata": {},
    "outputs": [
@@ -109,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 51.04it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 51.88it/s]\n"
      ]
     }
    ],
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "378d1826-d327-4b53-a72f-73f417380c7b",
    "metadata": {},
    "outputs": [],
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e3317727-fd74-4430-9806-1f7835cd5d23",
    "metadata": {},
    "outputs": [
@@ -177,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "82fae9b1-6809-44d0-a0e4-2544a6b377d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e16b1fa99bb4b9ea801eba4887cffd7",
+       "model_id": "32c715d944234712b3f02821b4d773cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faa7f805ad9a4473a4ad511b8fd00154",
+       "model_id": "4dfc4347a47c4d8f9dc0bab9fc5cd836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +226,7 @@
        "(8530, 768)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "6658860a-1733-40c8-bc38-67b62a03b9f1",
    "metadata": {},
    "outputs": [
@@ -1141,7 +1152,7 @@
        "LogisticRegression(random_state=1103)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8f4d9838-78a7-4144-bb6e-c033dae6e7ab",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3c0316c1-9419-405c-ae30-ff259c772d9e",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1204,7 @@
        "         0.03357305, -0.04018767]], shape=(2, 768), dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ec38da69-c280-408c-9a82-e99d16c2329e",
    "metadata": {},
    "outputs": [
@@ -1233,108 +1244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "8805e857-fd9d-4dc2-9972-db68bcfc5dc4",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62e9abd3f0354f3aa42bc12f9e40651a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e87aa562e3304b609ca061020b5ab2fb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/308M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d7fa0b72f4741ef93ec9c7453911ce2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/147 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a3f2f13b4c1479bba73d2cc76d41339",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b483da96fd74207bb850ef87e8cb52c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46cfad8d4d0143e5a0f4e9ff8d3b0112",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ff75c9dd4b14ddc9f1844fb9960fc32",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1349,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "4817cbfc-722b-4242-943a-45665b970419",
    "metadata": {},
    "outputs": [],
@@ -1359,52 +1272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "92758d71-67ec-420f-aa0f-053fa6782380",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "843965e840534d66b97e7d7450a639ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/8530 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "528793066d76407e9728e9f12d411f2c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/1066 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71f7264b7d974061a9365dfba9e87994",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/1066 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -1424,7 +1295,7 @@
        "})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "99169758-0f22-4e00-a962-ba1c20746d68",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [01:34<00:00, 11.26it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [01:23<00:00, 12.70it/s]\n"
      ]
     }
    ],
@@ -1484,8 +1355,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "769f8640-cc56-4b63-acaf-8152dc39d71a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./config/keys.json', 'r') as f:\n",
+    "    keys = json.load(f)\n",
+    "    openai_key = keys['openai']['key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ba5ac309-8868-4f3f-810d-95a088fd02a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = openai.OpenAI(api_key=openai_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0cf64054-07dc-45ae-8a09-ab67b74f7cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chatgpt_generate(prompt, doc, mod='gpt-3.5-turbo-0125'):\n",
+    "    'Generate an output based on prompt and an input doc'\n",
+    "    msgs = [\n",
+    "        {'role': 'system', 'content': 'You are a helpful assistant.'},\n",
+    "        {'role': 'user', 'content': prompt.replace('[DOCUMENT]', doc)}]\n",
+    "    chat_completion = client.chat.completions.create(\n",
+    "        messages=msgs, model=mod, temperature=0)\n",
+    "    return chat_completion.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af56e955-786f-4f85-a272-c4e13ed363cb",
    "metadata": {},
    "outputs": [],
    "source": []
