--- a/kangaroo/04_text_classification.ipynb
+++ b/kangaroo/04_text_classification.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "a9daa79e-d647-4a7f-a6d6-28d9d7515a81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#234567890#234567890#234567890#234567890#234567890#234567890#234567890#234567890\n",
+    "#234567890#234567890#234567890#234567890#234567890#234567890#234567890#23456789\n",
     "import json\n",
     "\n",
     "from datasets import load_dataset\n",
@@ -24,18 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ed2dbd98-12ea-445b-b8d2-23969723d569",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since rotten_tomatoes couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /Users/damiansp/.cache/huggingface/datasets/rotten_tomatoes/default/0.0.0/aa13bc287fa6fcab6daf52f0dfb9994269ffea28 (last modified on Tue Feb 17 08:53:10 2026).\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -55,7 +47,7 @@
        "})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3f0985f1-5a40-4fd5-bfc2-b772e6aa2b49",
    "metadata": {},
    "outputs": [
@@ -79,7 +71,7 @@
        " 'label': [1, 0]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c642c33b-9665-4463-b29b-369c93b3b4e2",
    "metadata": {},
    "outputs": [
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6be705dd-fc9a-4b81-bd58-743f2b592d1f",
    "metadata": {},
    "outputs": [
@@ -120,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [00:20<00:00, 51.88it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [00:21<00:00, 48.83it/s]\n"
      ]
     }
    ],
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "378d1826-d327-4b53-a72f-73f417380c7b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e3317727-fd74-4430-9806-1f7835cd5d23",
    "metadata": {},
    "outputs": [
@@ -188,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "82fae9b1-6809-44d0-a0e4-2544a6b377d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32c715d944234712b3f02821b4d773cd",
+       "model_id": "803be610482c4a2e9c9bcdbfc37c414d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dfc4347a47c4d8f9dc0bab9fc5cd836",
+       "model_id": "144f3c94336140f781e86eb473e2ed4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,7 +218,7 @@
        "(8530, 768)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "6658860a-1733-40c8-bc38-67b62a03b9f1",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1144,7 @@
        "LogisticRegression(random_state=1103)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8f4d9838-78a7-4144-bb6e-c033dae6e7ab",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3c0316c1-9419-405c-ae30-ff259c772d9e",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1196,7 @@
        "         0.03357305, -0.04018767]], shape=(2, 768), dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ec38da69-c280-408c-9a82-e99d16c2329e",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8805e857-fd9d-4dc2-9972-db68bcfc5dc4",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "4817cbfc-722b-4242-943a-45665b970419",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "92758d71-67ec-420f-aa0f-053fa6782380",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1287,7 @@
        "})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "99169758-0f22-4e00-a962-ba1c20746d68",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1066/1066 [01:23<00:00, 12.70it/s]\n"
+      "100%|███████████████████████████████████████| 1066/1066 [01:26<00:00, 12.39it/s]\n"
      ]
     }
    ],
@@ -1329,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b6b2bf4d-3a6d-4c33-ac6a-e9e4416f4539",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "769f8640-cc56-4b63-acaf-8152dc39d71a",
    "metadata": {},
    "outputs": [],
@@ -1367,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "ba5ac309-8868-4f3f-810d-95a088fd02a9",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "0cf64054-07dc-45ae-8a09-ab67b74f7cd8",
    "metadata": {},
    "outputs": [],
@@ -1394,8 +1386,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "af56e955-786f-4f85-a272-c4e13ed363cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = (\n",
+    "    'Predict whether the following document is a positive or negative movie '\n",
+    "    'review:\\n'\n",
+    "    '[DOCUMENT]\\n'\n",
+    "    'If it is positive return a 1, if it is negative return a 0. Do not '\n",
+    "    'provide any additional information')\n",
+    "doc = 'unpretentious, charming, quirky, original'\n",
+    "chatgpt_generate(prompt, doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f0e391-5376-4df8-a20e-8f68b05a5381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Costs money to actually run\n",
+    "#preds = [\n",
+    "#    chatgpt_generate(prompt, doc) for doc in tqdm(data['test']['text'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd5a37e-f175-4a1c-b4fe-85ef228f6393",
    "metadata": {},
    "outputs": [],
    "source": []
